# Delphi

./: .gitignore  Book1.xlsx  Book1_standardized.xlsx  README.md  index.html  insight.html  run_delphi.sh  run_observed.py  script.js  styles.css
hypothesis_agent/: .env.example  .gitignore  README.md  pyproject.toml
hypothesis_agent/docs/: ARCHITECTURE.md
hypothesis_agent/examples/: langfuse_mcp_demo.py  run_local_demo.py
hypothesis_agent/sample_data/: stories.json
hypothesis_agent/sample_data/hypotheses/: hist_28f12cf1ca13.html  hist_76acfa88ab48.html
hypothesis_agent/src/hypothesis_agent/: __init__.py  agent.py  logging_setup.py
hypothesis_agent/src/hypothesis_agent/adapters/: analysis_agent_gateway.py  shl_sample_cohort.py
hypothesis_agent/src/hypothesis_agent/config/: __init__.py  default.yaml  settings.py
hypothesis_agent/src/hypothesis_agent/contracts/: __init__.py  hypothesis.py  llm.py  memory.py  organization.py
hypothesis_agent/src/hypothesis_agent/di/: __init__.py  container.py
hypothesis_agent/src/hypothesis_agent/plugins/: __init__.py  business_lens.py  registry.py
hypothesis_agent/src/hypothesis_agent/ports/: __init__.py  analysis_agent_gateway.py  embedding_service.py  employee_repository.py  feedback_repository.py  historical_memory_repository.py  llm_service.py  organization_repository.py  understanding_engine.py
hypothesis_agent/src/hypothesis_agent/prompts/: __init__.py  registry.py
hypothesis_agent/src/hypothesis_agent/reasoning/: __init__.py  dependencies.py  graph.py  observability.py  state.py
hypothesis_agent/src/hypothesis_agent/server/: __main__.py  app.py
hypothesis_agent/tests/integration/: test_full_search_loop.py  test_investigation_seed.py  test_live_backends.py  test_server_api.py
hypothesis_agent/tests/unit/: test_architecture_boundaries.py  test_card_image_renderer.py  test_config.py  test_contracts.py  test_dedup_guard.py  test_entropy_heuristic.py  test_feasibility_evaluator.py  test_json_hypothesis_store.py  test_mock_llm_service.py  test_plugin_registry.py  test_shl_sample_cohort.py  test_soft_prior_policy.py  test_stopping_and_scoring.py  test_workday_employee_repository.py
insight_pipeline/: README.md  pyproject.toml
insight_pipeline/examples/: run_investigation_demo.py  run_investigation_from_server.py
insight_pipeline/src/insight_pipeline/: __init__.py  logging_setup.py
insight_pipeline/tests/integration/: test_analytics_agent.py  test_data_retrieval_agent.py  test_multi_angle_analytics.py  test_server_api.py  test_visualization_and_plotting.py
insight_pipeline/tests/unit/: test_architecture_boundaries.py  test_business_insight_agent.py  test_construct_grounding.py  test_data_retrieval.py  test_framework.py  test_investigation_planner.py  test_narrative_agent.py  test_organization_knowledge.py  test_root_cause_agent.py  test_root_cause_grounding_enforcement.py
(+201 files in other folders)
